k8s/api2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api2
  template:
    metadata:
      labels:
        app: api2
    spec:
      containers:
      - name: api2
        image: ravi2krishna/node-api2 
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: api2-service
spec:
  selector:
    app: api2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
