k8s/pg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP # Optional
  selector:
    component: postgres
  ports:
    - port: 5432
